# python_project

./: README.md  pyproject.toml  setup.py
.github/workflows/: greet.yml
cm_pkg/: module1.py
cm_pkg/ui/: __init__.py  main_ui.py
tests/: test_add_numbers.py
